# BA-FB

./: .gitattributes  Cargo.toml  README.md  bafb.toml.example  global_mod.rs  japan_mod.rs  mod.rs
Global/: AcademyFavorScheduleExcel.cs  AcademyFavorScheduleExcelTable.cs  AcademyLocationExcel.cs  AcademyLocationExcelTable.cs  AcademyLocationRankExcel.cs  AcademyLocationRankExcelTable.cs  AcademyMessageConditions.cs  AcademyMessageTypes.cs  AcademyMessanger1Excel.cs  AcademyMessanger1ExcelTable.cs  AcademyMessanger2Excel.cs  AcademyMessanger2ExcelTable.cs  AcademyMessanger3Excel.cs  AcademyMessanger3ExcelTable.cs  AcademyMessangerExcel.cs  AcademyMessangerExcelTable.cs  AcademyRewardExcel.cs  AcademyRewardExcelTable.cs  AcademyTicketExcel.cs  AcademyTicketExcelTable.cs  AcademyZoneExcel.cs  AcademyZoneExcelTable.cs  AccountLevelExcel.cs  AccountLevelRewardExcel.cs  AccountState.cs  ActionType.cs  AddressableBlackListExcel.cs  AddressableBlackListExcelTable.cs  AddressableWhiteListExcel.cs  AddressableWhiteListExcelTable.cs  AimIKType.cs  AniEventData.cs  AniStateData.cs  AnimationBlendTable.cs  AnimatorData.cs  AnimatorDataTable.cs  Anniversary.cs  ArenaLevelSectionExcel.cs  ArenaLevelSectionExcelTable.cs  ArenaMapExcel.cs  (+933 more)
Japan/: AcademyFavorScheduleExcel.cs  AcademyLocationExcel.cs  AcademyLocationRankExcel.cs  AcademyMessageConditions.cs  AcademyMessageTypes.cs  AcademyMessangerExcel.cs  AcademyRewardExcel.cs  AcademyTicketExcel.cs  AcademyZoneExcel.cs  AccountLevelExcel.cs  AccountLevelRewardExcel.cs  AccountState.cs  ActionType.cs  AimIKType.cs  AniEventData.cs  AniStateData.cs  AnimationBlendTable.cs  AnimatorData.cs  AnimatorDataTable.cs  Anniversary.cs  ArenaLevelSectionExcel.cs  ArenaMapExcel.cs  ArenaNPCExcel.cs  ArmorType.cs  (+806 more)
(+1633 files in other folders)
