[package]
name = "bafb"
version = "1.5.0"
edition = "2024"

[features]
default = []
no_logs = [ "baad-core/no_logs" ]
no_debug = [ "baad-core/no_debug" ]
no_error = [ "baad-core/no_error" ]

[dependencies]
anyhow = "1.0.98"
reqwest = "0.12.22"
tokio = { version = "1.46.0", features = ["full"] }
zip = "4.2.0"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

baad = { git = "https://github.com/Deathemonic/BA-AD", version = "2.1.5" }
baad-core = { git = "https://github.com/RZinth/BA-AD-Core", version = "0.0.2" }
trauma = { git = "https://github.com/RZinth/trauma", version = "2.6.0", features = ["rustls"] }
