[package]
name = "bafb"
version = "1.6.3"
edition = "2024"

[dependencies]
eyre = "0.6.12"
reqwest = "0.12.23"
tokio = { version = "1.46.1", features = ["full"] }
zip = "5.1.1"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.227", features = ["derive"] }
toml = "0.9.7"

baad = { git = "https://github.com/Deathemonic/BA-AD", version = "2.8.4" }
trauma = { git = "https://github.com/RZinth/trauma", version = "3.3.1", features = ["rustls"] }
