[package]
name = "bafb"
version = "1.7.1"
edition = "2024"

[dependencies]
eyre = "0.6.12"
reqwest = "0.12.24"
tokio = { version = "1.48", features = ["full"] }
zip = "6.0.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"

baad = { git = "https://github.com/Deathemonic/BA-AD", version = "2.9.0" }
trauma = { git = "https://github.com/RZinth/trauma", version = "3.3.1", features = ["rustls"] }
